# sentinel-1-sar-extraction

./: .env.example  README.md  config.py  pyproject.toml
extraction_areas/: mumbai_offshore.geojson
notebooks/: .env.example  download_sar_data.ipynb
notebooks/extraction_areas/: mumbai_offshore.geojson  mumbai_offshore_subset.geojson
scripts/: download_sar_data.py  postprocessing.py
