[project]
name = "sentinel-1-sar-extraction"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aryan Iyappan", email = "aryaniyappan2006@gmail.com"},
]
dependencies = [
    "sentinelsat>=1.2.1",
    "pydantic-settings>=2.5.2",
    "snappy>=3.1.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
